[tool.poetry]
name = "fansite-bot"
version = "4.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
tweepy = "^3.10.0"
arrow = "^1.0.2"
aiomysql = "^0.0.21"
coloredlogs = "^15.0"
uvloop = "^0.15.2"
psutil = "^5.8.0"
toml = "^0.10.2"
discord-ext-menus = {git = "https://github.com/joinemm/discord-ext-menus"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
